--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -19,13 +20,16 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore RealEstate.API/RealEstate.API.csproj
+        working-directory: RealEstate.API
+        run: dotnet restore
 
       - name: Build
-        run: dotnet build RealEstate.API/RealEstate.API.csproj --no-restore
+        working-directory: RealEstate.API
+        run: dotnet build --no-restore
 
       - name: Run tests
-        run: dotnet test RealEstate.API/RealEstate.API.csproj --no-build --verbosity normal
+        working-directory: RealEstate.API
+        run: dotnet test --no-build --verbosity normal
 
   docker-build:
     runs-on: ubuntu-latest
@@ -34,7 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -43,7 +47,6 @@ jobs:
       - name: Build Docker image
         run: |
           docker build \
-            --build-arg DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
             -t your-dockerhub-username/realestate-api:latest \
             -f RealEstate.API/Dockerfile .
 
