--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - run: echo ${{ secrets.DOCKER_USERNAME }}
+      
+      - name: Test Docker Hub secret
+        run: echo "Docker Hub username is: ${{ secrets.DOCKER_USERNAME }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
