--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Test Docker Hub secret
-        run: echo "Docker Hub username is: ${{ secrets.DOCKER_USERNAME }}"
+        run: echo "Docker Hub username is ${{ secrets.DOCKER_USERNAME }}"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
