--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Test Docker Hub secret
-        run: echo "Docker Hub username is ${{ secrets.DOCKER_USERNAME }}"
+      - name: Test Docker login
+        run: |
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
